--- a/public/html/index.html
+++ b/public/html/index.html
@@ -18,7 +18,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/aboutus">About Us</a></li>
                 <li><a href="/softskills">Soft Skills</a></li>
-                <li><a href="/contact">Contact</a></li>
+                <li><a href="/contact">Contacts</a></li>
                 <li><a href="/login">Register/Log-In</a></li>
             </ul>
         </nav>
