--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -13,27 +13,13 @@
         <img src="../images/gaming.jpg" alt="GIRL Logo" class="logo">
         <img src="../images/irl.jpg" alt="GIRL Logo" class="logo">
 
-        <!-- <div class="container text-center w-25">
-            <form action="/form_submit" method="POST">
-                <div class="form-group">
-                    <input type="text" name="username" class="form-control" value="" placeholder="Username">
-                </div>
-                <div class="form-group">
-                    <input type="text" name="password" class="form-control" value="" placeholder="Password">
-                </div>
-                <div class="form-group">
-                    <input type="submit" class="btn btn-primary" value="Submit">
-                </div>
-            </form>
-        </div> -->
-
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/aboutus">About Us</a></li>
                 <li><a href="/softskills">Soft Skills</a></li>
                 <li><a href="/contact">Contact</a></li>
-                <li><a href="/contact">Register/Log-In</a></li>
+                <li><a href="/login">Register/Log-In</a></li>
             </ul>
         </nav>
 
