--- a/public/html/aboutus.html
+++ b/public/html/aboutus.html
@@ -19,7 +19,7 @@
                 <li><a href="/aboutus">About Us</a></li>
                 <li><a href="/softskills">Soft Skills</a></li>
                 <li><a href="/contact">Contact</a></li>
-                <li><a href="/contact">Register/Log-In</a></li>
+                <li><a href="/login">Register/Log-In</a></li>
             </ul>
         </nav>
     </header>
