--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -10,8 +10,8 @@
     <body>
         
     <header>
-        <img src="../images/gaming.jpg" alt="GIRL Logo" class="logo">
-        <img src="../images/irl.jpg" alt="GIRL Logo" class="logo">
+        <a href="/"><img src="../images/gaming.jpg" alt="GIRL Logo" class="logo"></a>
+        <a href="/"><img src="../images/irl.jpg" alt="GIRL Logo" class="logo"></a>
 
         <nav>
             <ul>
